--- a/config.example.json
+++ b/config.example.json
@@ -49,6 +49,10 @@
     "execTimeout": 60,
     "restrictToWorkspace": true
   },
+  "skills": {
+    "enabled": true,
+    "dir": ""
+  },
   "gateway": {
     "host": "0.0.0.0",
     "port": 18790
